# FSTAB-Manager

./: .gitmodules  CMakeLists.txt  list_mounted_disks.cpp
src/: main.cpp
